Align docs branding and fix home layout

--- a/style.css
+++ b/style.css
@@ -76,18 +76,6 @@ body:has([data-product-guide-index]) #sidebar a.nav-anchor[href='/'] svg {
   background-color: rgb(var(--primary-light)/var(--tw-text-opacity,1)) !important;
 }
 
-:is(#content-area[data-current-path='/'], [data-current-path='/'] #content-area):has([data-product-guide-index]) {
-  background: transparent !important;
-  padding: 0 !important;
-}
-
-:is(#content-area[data-current-path='/'], [data-current-path='/'] #content-area):has([data-product-guide-index]) > div:first-child {
-  background: transparent !important;
-  padding-right: 0 !important;
-  padding-bottom: 0 !important;
-  padding-left: 0 !important;
-}
-
 [data-product-guide-index] a:not(.product-guide-feature-card) {
   background-color: #fafafa !important;
 }
